Closer look as demo

--- a/app/assets/stylesheets/application.sass.scss
+++ b/app/assets/stylesheets/application.sass.scss
@@ -8,4 +8,5 @@
 
 // @import 'turbo_editable/application.css';
 
-// @import "flatpickr/dist/flatpickr";
+@import "flatpickr/dist/flatpickr"; 
+@import "flatpickr/dist/plugins/monthSelect/style";
